A quick fix to prevent menu items from jumping left to right while loading

--- a/AdminBundle/Resources/Public/less/sidebar.less
+++ b/AdminBundle/Resources/Public/less/sidebar.less
@@ -124,6 +124,8 @@
       font-size: 17px;
       transition: .3s;
       line-height: 35px;
+      min-height: 1px;
+      min-width: 18px;
     }
 
     &.active {
